@@ -1,6 +1,7 @@
 1.3.2.2 ()
 ==================
 
+- Added -p option to control output precision for -r and -e modes.
 - Turkish translations thanks to Angel Spy and Devrim Şahin.
 - Updated Czech translations thanks to Kuvaly [LCT].
 - Updated Basque translations thanks to Mikel Haranburu.
